# Sentinel-AI-v2

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CHANGELOG.md  CONTRACT.md  INDEX.md  SENTINEL_ADAPTIVE_CORE_INTEGRATION.md  TROUBLESHOOTING.md  technical-spec.md  whitepaper-sentinel-ai-v2.md
docs/legacy/: whitepaper-sentinel-ai-v2.md
src/sentinel_ai_v2/: __init__.py  adaptive_bridge.py  adaptive_core_bridge.py  adaptive_event.py  adversarial_engine.py  api.py  cli.py  feedback_hooks.py  heartbeat.py  model_loader.py  rpc_client.py  server.py  telemetry_monitor.py  v3.py
src/sentinel_ai_v2/contracts/: __init__.py  v3_reason_codes.py  v3_types.py
src/sentinel_ai_v2/engine/: feature_engineering.py  threat_models.py
src/sentinel_ai_v2/wrapper/: monitor.py  sentinel_wrapper.py  workflow.py
tests/: ATTACK-SIMULATION-REPORT.md  fixtures_v3.py  test_block_progress_monitor.py  test_contract_context_hash_payload.py  test_contract_v3_bad_number_fail_closed.py  test_contract_v3_fail_closed.py  test_contract_v3_unknown_key_fail_closed.py  test_coverage_adaptive_event_and_bridge.py  test_coverage_rpc_client.py  test_coverage_server_endpoints.py  test_coverage_v3_and_api_smoke.py  test_coverage_v3_more_branches.py  test_coverage_v3_types_deep_branches.py  test_coverage_wrapper_monitor.py  test_coverage_wrapper_sentinel_wrapper.py  test_coverage_wrapper_workflow.py  test_imports.py  test_risk_score.py  test_toxic_telemetry_regression_pack.py
