[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgb-sentinel-ai"
version = "0.0.0"
description = "Sentinel AI — external telemetry analysis layer enforcing Shield Contract v3."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DarekDGB" }]

# Runtime deps (imported by the package)
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
# Optional API server extras (only needed if using src/sentinel_ai_v2/server.py)
api = [
  "fastapi>=0.110",
  "pydantic>=2.0",
]

# Developer / CI extras
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
